Rename webhook types to webhook events for consistency
