# api/docs/yorkie/v1/resources.openapi.yaml
@@ -228,8 +228,9 @@ components:
       type: object
     yorkie.v1.ChangePack:
       additionalProperties: false
-      description: "ChangePack is a message that contains all changes that occurred
-        in a document.\r\n It is used to synchronize changes between clients and servers."
+      description: |-
+        ChangePack is a message that contains all changes that occurred in a document.
+         It is used to synchronize changes between clients and servers.
       properties:
         changes:
           additionalProperties: false
@@ -971,10 +972,11 @@ components:
       type: object
     yorkie.v1.Operation.Select:
       additionalProperties: false
-      description: "NOTE(hackerwins): Select Operation is not used in the current
-        version.\r\n In the previous version, it was used to represent selection of
-        Text.\r\n However, it has been replaced by Presence now. It is retained for
-        backward\r\n compatibility purposes."
+      description: |-
+        NOTE(hackerwins): Select Operation is not used in the current version.
+         In the previous version, it was used to represent selection of Text.
+         However, it has been replaced by Presence now. It is retained for backward
+         compatibility purposes.
       properties:
         executedAt:
           $ref: '#/components/schemas/yorkie.v1.TimeTicket'
@@ -1333,12 +1335,12 @@ components:
           description: ""
           title: created_at
           type: object
-        eventWebhookTypes:
+        eventWebhookEvents:
           additionalProperties: false
           description: ""
           items:
             type: string
-          title: event_webhook_types
+          title: event_webhook_events
           type: array
         eventWebhookUrl:
           additionalProperties: false
@@ -1410,8 +1412,10 @@ components:
       type: object
     yorkie.v1.Snapshot:
       additionalProperties: false
-      description: "///////////////////////////////////////\r\n Messages for Snapshot
-        \              //\r\n///////////////////////////////////////"
+      description: |-
+        ///////////////////////////////////////
+         Messages for Snapshot               //
+        ///////////////////////////////////////
       properties:
         presences:
           additionalProperties: false
@@ -1695,11 +1699,11 @@ components:
           description: ""
           title: client_deactivate_threshold
           type: object
-        eventWebhookTypes:
-          $ref: '#/components/schemas/yorkie.v1.UpdatableProjectFields.EventWebhookTypes'
+        eventWebhookEvents:
+          $ref: '#/components/schemas/yorkie.v1.UpdatableProjectFields.EventWebhookEvents'
           additionalProperties: false
           description: ""
-          title: event_webhook_types
+          title: event_webhook_events
           type: object
         eventWebhookUrl:
           $ref: '#/components/schemas/google.protobuf.StringValue'
@@ -1728,18 +1732,18 @@ components:
           type: array
       title: AuthWebhookMethods
       type: object
-    yorkie.v1.UpdatableProjectFields.EventWebhookTypes:
+    yorkie.v1.UpdatableProjectFields.EventWebhookEvents:
       additionalProperties: false
       description: ""
       properties:
-        types:
+        events:
           additionalProperties: false
           description: ""
           items:
             type: string
-          title: types
+          title: events
           type: array
-      title: EventWebhookTypes
+      title: EventWebhookEvents
       type: object
     yorkie.v1.User:
       additionalProperties: false
